--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,7 +11,10 @@
 html {
     font-family: 'Comfortaa', cursive;
     font-size: 18px;
+    overflow-x: hidden;
 }
+
+
 
 
 /* HEADER */
@@ -19,21 +22,22 @@ html {
 header {
     height: 105vh;
     margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
     background-image: url(grid%20splatter.jpg);
     background-size: cover;
+    background-attachment: fixed;
 }
 
 #header-name {
-    margin-top: 0;
-    padding-top: 0;
     font-family: 'Glass Antiqua', cursive;
     font-weight: 100;
-    font-size: 280%;
-    margin-top: 20px;
-    margin-right: 60px;
-    float: right;
+    font-size: 200%;
+    margin-left: 780px;
     text-transform: none;
     color: #000;
+    border: none;
+    width: 100%;
 }
 
 #header-slogan {
@@ -44,6 +48,8 @@ header {
     text-align: left;
     text-transform: none;
     color: #000;
+    border: none;
+    width: 100%;
 }
 
 .headshot img{
@@ -52,14 +58,26 @@ header {
     height: 300px; 
     margin-top: 80px;
     margin-left: 170px;
+    border-bottom: solid 3px #6d6a6a;
 }
 
 /* REUSEABLE COMPONENTS */
 
 h1{
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 5px;
+    width: 300;
     text-transform: lowercase;  
-    color: #ec23ec;
+    color: #000;
+    border-bottom: dashed 5px #000; 
+    margin-top: 0;
+    padding-top: 5px
+}
+
+h3{
+    padding-left: 15px;
 }
 
 
@@ -94,28 +112,194 @@ h1{
 }
 
 
-/*SECTION WHAT*/
+/*SECTION WHO*/
 
-.section-what{
-    height: 100vh;
-    background-color: rgba(255, 240, 240, 0.8);
-    padding-top: 30px;   
+.section-who{
+    height: 106vh;
+    background-color: #e8e8e8;
+    background-image: url(create.png);
+    background-size: cover;
+    background-attachment: fixed;
+    margin-top: 0;
+    padding-top: 20px;
+}
+
+.who-box{
+    margin-left: 40px;
+    width: 85%;
+}
+
+.content-who{
+    margin-top: 20px;
+    background-color: rgba(44, 44, 44, 0.74);
+    border-radius: 5px;
+    border-bottom: solid 3px #2f2f2f;
+}
+
+.content-who p{
+    margin-left: 40px;
+    margin-right: 20px;
+    color: #fff;
+}
+.image-who{
+    text-align: right;
+}
+
+.image-who a img:hover,
+.image-who a img:active{
+    width: 300px;
+    opacity: 1;
+    transition: .5s;
+}
+
+.image-who img{
+    width: 250px;
+    margin-left: 250px;
+    margin-top: 0px;
+    opacity: .8;
+}
+
+/*WHAT I DO SECTION*/
+
+.section-what {
+    height: 106vh;
+    background-image: url(what%20backgound.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-blend-mode: overlay;
+}
+
+.about-what{
+    width: 500px;
+    height: 70vh;
+    background-color: rgba(232, 232, 232, 0.79);
+    border-radius: 5px;
+    border-bottom: solid 3px #333333;
+    margin-left: 90px;
 }
 
 .content-what{
-    margin-top: 20px;
+    padding: 0 15px;
 }
 
-.content-what p{
-    margin-left: 30px;
-    width: 80%;   
-}
-.image-what{
-    text-align: center;
+.experience-what{
+    width: 300px;
+    height: 30vh;
+    background-color: rgba(0, 0, 0, 0.71);
+    border-radius: 5px;
+    float: left;
+    border-bottom: solid 3px #2a2a2a;
+    color: #fff;
 }
 
-.image-what img{
-    width: 80%;
-    margin-top: 60px;
+.content-what li{
+    margin-left: 15px;
+    margin-top: 10px;
 }
-    
+
+.web-dev-what{
+    width: 300px;
+    height: 30vh;
+    background-color: rgba(0, 0, 0, 0.71);
+    border-radius: 5px;
+    border-bottom: solid 3px #2a2a2a;
+    color: #fff;
+}
+
+.learning-what{
+    width: 622px;
+    height: 36vh;
+    border-radius: 5px;
+    border: solid 3px rgba(7, 11, 90, 0.13);
+    background-color: rgba(0, 7, 88, 0.68);
+    color: #fff;
+}
+
+
+/*WHY I DO IT SECTION*/
+
+.section-why{
+    height: 106vh;
+    margin-top: 0;
+    padding-top: 0; 
+    background-image: url(why%20background.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.top-box-why{
+    height: 80vh;
+    background-color: rgba(232, 232, 232, 0.26);
+}
+
+.quote-box-why{
+    width: 40%;
+    margin-left: 60px;
+    margin-top: -370px;
+}
+
+#quote-one{
+    margin-left: 50px;
+    margin-right: 200px;
+    padding: 10px;
+    border: solid 1px rgba(216, 216, 216, 0.33);
+    border-radius: 15px;
+    border-bottom: solid 3px rgba(255, 255, 255, 0.12);
+}
+
+#quote-two{
+    margin-left: 200px;
+    margin-right: 90px;
+    margin-top: 80px; 
+    padding: 10px;
+    border: solid 1px rgba(216, 216, 216, 0.33);
+    border-radius: 15px;
+    border-bottom: solid 3px rgba(255, 255, 255, 0.12);
+}
+
+#quote-three{
+    margin-right: 150px;
+    margin-top: 50px;
+    padding: 10px;
+    border: solid 1px rgba(216, 216, 216, 0.33);
+    border-radius: 15px;
+    border-bottom: solid 3px rgba(255, 255, 255, 0.06);
+}
+
+.quote-why,
+.content-why{
+    padding: 2px 15px;
+}
+
+.content-box-why{
+    width: 38%;
+    height: 320px;
+    float: right;
+    margin-top: -250px;
+    margin-right: 100px;
+    border: solid 2px #969696;
+    border-bottom: solid 3px rgba(62, 62, 62, 0.25);
+    border-radius: 10px;
+    background-color: rgba(232, 232, 232, 0.36); 
+}
+
+.bottom-box-why{
+    height: 26vh;   
+    background-color: rgba(44, 44, 44, 0.74);
+}
+
+/*FUTURE GOALS SECTION*/
+
+.section-future{
+    height: 106vh;
+    background-image: url(future%20background.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    margin-bottom: 0;
+}
+
+.future-container{
+    height: 106vh;
+    background-color: rgba(224, 7, 7, 0.25);
+    width: 100%;
+}
