--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,7 +14,16 @@ html {
     overflow-x: hidden;
 }
 
-
+body:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+}
 
 
 /* HEADER */
