--- a/resources/css/queries-mobile.css
+++ b/resources/css/queries-mobile.css
@@ -1,24 +1,24 @@
 /* Media Quereies for iPhone X*/
 @media only screen and (max-width: 812px) {
     *{
-        width: 150%;
-        font-size: 120%;
+        width: 160%;
+        font-size: 125%;
     }
     
     h1{
-        margin-left: 340px;
-        font-size: 205%;
+        margin-left: 600px;
+        font-size: 295%;
     }
     
     /*HEADER SECTION*/
     
     header{
         background-size: contain;
-        height: 175vh;
+        height: 210vh;
     }
-    
+   
     .headshot {
-        margin-left: 10%;
+        margin-left: 21%;
     }
     
     .headshot img{
@@ -27,13 +27,13 @@
     }
     
     #header-slogan{
-        font-size: 180%;
+        font-size: 265%;
         margin-left: 18px;
     }
     
     #header-name{
-        margin-left: 102px;
-        font-size: 290%;
+        margin-left: 300px;
+        font-size: 390%;
     }
     
     /*WHO I DO SECTION*/
@@ -41,21 +41,31 @@
     .section-who{
         background-size:contain;
         background-attachment: scroll;
-        height: 335vh;
+        height: 495vh;
     }
     
     .who-box{
-        margin-left: 0px;
-        margin-right: 0px;
+        width: 100%;
+        margin-left: 0;
     }
     
     .who-box p{
-        width: 70%;
+        width: 90%;
         margin-left: 65px;
+        font-size: 150%;
     }
     
     .image-who{
         text-align: left;
-        margin-left: 20px;
+        margin-left: 120px;
+    }
+    
+    .image-who img{
+        width: 450px;
+    }
+    
+    .image-who a img:hover,
+    .image-who a img:active{
+        width: 520px;
     }
 }
