--- a/resources/css/queries-mobile.css
+++ b/resources/css/queries-mobile.css
@@ -14,7 +14,8 @@
     
     header{
         background-size: contain;
-        height: 210vh;
+        background-position: right;
+        height: 250vh;
     }
    
     .headshot {
@@ -41,7 +42,7 @@
     .section-who{
         background-size:contain;
         background-attachment: scroll;
-        height: 495vh;
+        height: 520vh;
     }
     
     .who-box{
